@@ -1,3 +1,4 @@
+2640 [AviSynth]             improved debug handling
 2639 [Main]                 removed aspect ratio controls from the video preview control. Bug #843
 2638 [Profile]              added support to import old export files (regression of 2635). Bug #849
 2637 [VobSubber]            each track will be demuxed into a dedicated file set to avoid missing tracks when muxing. Bug #845
